--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="fr.pds.isintheair.crmtab">
 
-<manifest
-    package="fr.pds.isintheair.crmtab"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".common.CrmTabApplication"
@@ -21,104 +18,88 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".common.view.activity.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
 
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".common.view.activity.ContactDetailActivity"
-            android:theme="@style/FullscreenTheme"/>
-
+            android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".common.view.activity.MainActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity android:name="net.hockeyapp.android.UpdateActivity"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name="net.hockeyapp.android.UpdateActivity" />
         <activity
             android:name=".tlacouque.uc.admin.ref.customer.view.activity.CRUDCustomerActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".common.view.activity.AbstractActivity"
-            android:label="@string/title_activity_abstract"/>
-
+            android:label="@string/title_activity_abstract" />
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvMainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CreateCrvActivity"
-            android:windowSoftInputMode="stateHidden"/>
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvHomeActivity"
-            android:label="CRM-tab"/>
-
-        <activity android:name=".jdatour.uc.phone.call.receive.view.CallActivity"/>
-
+            android:label="CRM-tab" />
+        <activity android:name=".jdatour.uc.phone.call.receive.view.CallActivity" />
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity android:name=".mbalabascarin.uc.edit.crv.view.VisitActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".mbalabascarin.uc.edit.crv.view.VisitActivity" />
 
         <receiver
             android:name=".jdatour.uc.phone.call.receive.controller.broadcastreceiver.BootServiceBrodcastReceiver"
             android:enabled="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService"/>
-        <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent"/>
+        <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService" />
+        <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent" />
 
-        <activity android:name=".ctruong.uc.propsect.suggestion.view.SchedulerActivity"/>
+        <activity android:name=".ctruong.uc.propsect.suggestion.view.SchedulerActivity" />
 
         <service
             android:name=".ctruong.uc.propsect.suggestion.notification.service.NotificationIntentService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
 
-        <receiver android:name=".ctruong.uc.propsect.suggestion.notification.receiver.NotificationEventReceiver"/>
-
+        <receiver android:name=".ctruong.uc.propsect.suggestion.notification.receiver.NotificationEventReceiver" />
         <receiver android:name=".ctruong.uc.propsect.suggestion.notification.receiver.NotificationServiceStarterReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.TIMEZONE_CHANGED"/>
-                <action android:name="android.intent.action.TIME_SET"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.TIME_SET" />
             </intent-filter>
         </receiver>
 
+        <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService" />
+        <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent" />
 
-        <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService"/>
-        <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent"/>
-
-
+        <activity android:name=".common.view.activity.ContactDetailActivity2"></activity>
     </application>
 
 </manifest>
