--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,8 @@
         <module>server-rest</module>
     </modules>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
