--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>server-rest</artifactId>
     <packaging>war</packaging>
-    <version>1.0.0-BUILD-SNAPSHOT</version>
+    <version>2.1</version>
     <properties>
         <java-version>1.6</java-version>
         <org.springframework-version>3.1.1.RELEASE</org.springframework-version>
