--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>server-rest</artifactId>
+    <artifactId>rest</artifactId>
     <packaging>war</packaging>
     <version>2.1</version>
     <properties>
