--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -8,9 +8,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>server-rest</artifactId>
+    <artifactId>api</artifactId>
     <packaging>war</packaging>
-    <version>1.0.0.0-BUILD</version>
+    <version>2.1</version>
     <properties>
         <java-version>1.6</java-version>
         <org.springframework-version>3.1.1.RELEASE</org.springframework-version>
