--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -25,9 +25,9 @@
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -35,16 +35,13 @@
             android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".mmefire.uc.sms.send.receive.activity.ActivityHome"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".mmefire.uc.sms.send.receive.activity.BaseActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".mmefire.uc.sms.send.receive.activity.ActivityNewMessage"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".common.view.activity.MainActivity"
             android:configChanges="orientation"
@@ -54,7 +51,7 @@
         <activity android:name="net.hockeyapp.android.UpdateActivity" />
         <activity
             android:name=".tlacouque.uc.admin.ref.customer.view.activity.CRUDCustomerActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".common.view.activity.AbstractActivity"
             android:label="@string/title_activity_abstract" />
@@ -85,26 +82,22 @@
             </intent-filter>
         </receiver>
 
-
         <service
             android:name=".ctruong.uc.propsect.suggestion.notification.service.NotificationIntentService"
             android:enabled="true"
-            android:exported="false"/>
-
-
+            android:exported="false" />
         <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService" />
         <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent" />
-
-
         <service
             android:name=".ctruong.uc.propsect.suggestion.notification.service.NotificationIntentService"
             android:enabled="true"
             android:exported="false" />
 
+        <activity android:name=".common.view.activity.ContactDetailActivity2" />
+        <activity android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
 
-
-
-        <activity android:name=".common.view.activity.ContactDetailActivity2"></activity>
+        </activity>
     </application>
 
 </manifest>
