--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -62,10 +62,8 @@ dependencies {
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:3.0'
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.crittercism.dexmaker:dexmaker:1.4'
-    androidTestCompile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
-    androidTestCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
+
+    testCompile('org.powermock:powermock-module-junit4:1.6.4')
+    testCompile('org.powermock:powermock-api-mockito:1.6.4')
 }
