--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.github.Raizlabs.DBFlow:dbflow:3.0.0-beta2'
     compile 'com.github.Raizlabs.DBFlow:dbflow-core:3.0.0-beta2'
+    compile 'com.github.tibolte:agendacalendarview:1.0.4'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
