--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -98,8 +98,7 @@
             android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".mbalabascarin.uc.mock.contacts.view.ImportContactActivity" />
-        <activity android:name=".mbalabascarin.uc.normalize.MainActivityNormalize" />
-        <activity android:name=".mbalabascarin.uc.normalize.SpellCheckActivity"></activity>
+        <activity android:name=".mbalabascarin.uc.normalize.NormalizeDemoActivity"></activity>
     </application>
 
 </manifest>
