--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -95,16 +95,17 @@
             android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".mbalabascarin.uc.mock.contacts.view.ImportContactActivity"/>
+
         <activity
             android:name=".jdatour.wi.agenda.mock.AgendaActivity"
             android:label="@string/title_activity_agenda">
         </activity>
 
+
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.DetailProspect"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".mbalabascarin.uc.normalize.NormalizeDemoActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".mbalabascarin.uc.normalize.NormalizeDemoActivity"/>
 
     </application>
 
