--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -35,12 +35,19 @@
             <version>${org.mongodb-version}</version>
         </dependency>
 
+        <!-- WS -->
         <dependency>
             <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
             <version>${org.morphia-version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>1.1</version>
+        </dependency>
 
         <!-- Spring -->
         <dependency>
