--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -56,21 +56,21 @@
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
-            android:name=".mbalabascarin.uc.edit.crv.view.CrvMainActivity"
+            android:name=".view.activity.CrvMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
-            android:name=".mbalabascarin.uc.edit.crv.view.CreateCrvActivity"
+            android:name=".view.activity.CreateCrvActivity"
             android:windowSoftInputMode="stateHidden"/>
         <activity
-            android:name=".mbalabascarin.uc.edit.crv.view.CrvHomeActivity"
+            android:name=".view.activity.CrvHomeActivity"
             android:label="CRM-tab"/>
         <activity android:name=".view.activity.CallActivity"/>
         <activity
-            android:name=".mbalabascarin.uc.edit.crv.view.CrvPreformatedMessage"
+            android:name=".view.activity.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".mbalabascarin.uc.edit.crv.view.VisitActivity"/>
+        <activity android:name=".view.activity.VisitActivity"/>
 
         <receiver
             android:name=".controller.broadcastreceiver.BootServiceBrodcastReceiver"
@@ -93,7 +93,7 @@
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".mbalabascarin.uc.mock.contacts.view.ImportContactActivity"/>
+        <activity android:name=".view.activity.ImportContactActivity"/>
 
         <activity
             android:name=".view.activity.AgendaActivity"
@@ -104,7 +104,7 @@
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.DetailProspect"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".mbalabascarin.uc.normalize.NormalizeDemoActivity"/>
+        <activity android:name=".view.activity.NormalizeDemoActivity"/>
 
     </application>
 
