--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -41,17 +41,10 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup:otto:1.3.8'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-
-    testCompile('org.powermock:powermock-module-junit4:1.6.4') {
-        exclude module: 'hamcrest-core'
-        exclude module: 'objenesis'
-    }
-
-    testCompile('org.powermock:powermock-api-mockito:1.6.4') {
-        exclude module: 'hamcrest-core'
-        exclude module: 'objenesis'
-    }
+    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.4'
 }
