--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="fr.pds.isintheair.crmtab"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
@@ -12,6 +18,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".CrmTabApplication"
@@ -89,6 +96,7 @@
         <service android:name=".controller.service.CallService"/>
         <service android:name=".controller.service.CalendarService"/>
         <service android:name=".controller.service.ListennerCallEndedEvent"/>
+        <service android:name=".controller.service.NotifyPresenceService"/>
 
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
