--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'net.hockeyapp.android:HockeySDK:3.5.0'
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.powermock:powermock-module-junit4:1.6.4'
