--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="fr.pds.isintheair.crmtab"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="fr.pds.isintheair.crmtab">
 
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
 
     <uses-permission android:name="android.permission.NFC" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".CrmTabApplication"
@@ -27,96 +25,87 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".view.activity.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.activity.ContactDetailActivity"
-            android:theme="@style/FullscreenTheme"/>
+            android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".mmefire.uc.sms.send.receive.activity.ActivityHome"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".mmefire.uc.sms.send.receive.activity.BaseActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".mmefire.uc.sms.send.receive.activity.ActivityNewMessage"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.activity.MainActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name="net.hockeyapp.android.UpdateActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name="net.hockeyapp.android.UpdateActivity" />
         <activity
             android:name=".view.activity.CRUDCustomerActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.activity.CrvMainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.activity.CreateCrvActivity"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".view.activity.CrvHomeActivity"
-            android:label="CRM-tab"/>
-        <activity android:name=".view.activity.CallActivity"/>
-
+            android:label="CRM-tab" />
+        <activity android:name=".view.activity.CallActivity" />
         <activity
             android:name=".view.activity.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".view.activity.VisitActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".view.activity.VisitActivity" />
 
         <receiver
             android:name=".controller.broadcastreceiver.BootServiceBrodcastReceiver"
             android:enabled="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-
-
 
         <service
             android:name=".ctruong.uc.propsect.suggestion.notification.service.NotificationIntentService"
             android:enabled="true"
-            android:exported="false"/>
-        <service android:name=".controller.service.CallService"/>
-        <service android:name=".controller.service.CalendarService"/>
-        <service android:name=".controller.service.ListennerCallEndedEvent"/>
-        <service android:name=".controller.service.NotifyPresenceService"/>
+            android:exported="false" />
+        <service android:name=".controller.service.CallService" />
+        <service android:name=".controller.service.CalendarService" />
+        <service android:name=".controller.service.ListennerCallEndedEvent" />
+        <service android:name=".controller.service.NotifyPresenceService" />
 
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".view.activity.ImportContactActivity"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".view.activity.ImportContactActivity" />
         <activity
             android:name=".view.activity.AgendaActivity"
-            android:label="@string/title_activity_agenda">
-        </activity>
-
-
+            android:label="@string/title_activity_agenda"></activity>
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.DetailProspect"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".view.activity.NormalizeDemoActivity"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".view.activity.NormalizeDemoActivity" />
+        <activity android:name=".ctruong.uc.propsect.suggestion.view.activity.SynchronisationActivity"></activity>
     </application>
 
 </manifest>
