--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 
     <application
         android:name=".CrmTabApplication"
@@ -111,9 +114,9 @@
             android:name=".ctruong.uc.propsect.suggestion.provider.MyContentProvider"
             android:authorities="fr.pds.isintheair.crm.controller.ctruong.uc.propsect.suggestion.provider.MyContentProvider"
             android:enabled="true"
-            android:label="@string/app_name"
             android:exported="false"
-            android:syncable="true" ></provider>
+            android:label="@string/app_name"
+            android:syncable="true"></provider>
     </application>
 
 </manifest>
