--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 
     <application
         android:name=".CrmTabApplication"
@@ -112,7 +115,7 @@
 
         <provider
             android:name=".ctruong.uc.propsect.suggestion.provider.MyContentProvider"
-            android:authorities="fr.pds.isintheair.crm.controller.ctruong.uc.propsect.suggestion.provider.MyContentProvider"
+            android:authorities="@string/content_authority"
             android:enabled="true"
             android:exported="false"
             android:label="@string/app_name"
