--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -119,7 +119,20 @@
             android:enabled="true"
             android:exported="false"
             android:label="@string/app_name"
-            android:syncable="true"></provider>
+            android:syncable="true" />
+
+        <service
+            android:name=".ctruong.uc.propsect.suggestion.service.SyncService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":sync" >
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/sync_adapter" />
+        </service>
     </application>
 
 </manifest>
